@@ -5,6 +5,7 @@ Substantial parts of the templates were written by Armin Ronacher
 
 Other contributors, listed alphabetically, are:
 
+* Henrique Bastos -- SVG support for graphviz extension
 * Daniel Bültmann -- todo extension
 * Michael Droettboom -- inheritance_diagram extension
 * Charles Duffy -- original graphviz extension
