@@ -13,6 +13,7 @@
 import re
 import posixpath
 from os import path
+from math import ceil
 from subprocess import Popen, PIPE
 try:
     from hashlib import sha1 as sha
@@ -27,6 +28,7 @@ from sphinx.util.compat import Directive
 
 
 mapname_re = re.compile(r'<map id="(.*?)"')
+svg_dim_re = re.compile(r'<svg\swidth="(\d+)pt"\sheight="(\d+)pt"', re.M)
 
 
 class GraphvizError(SphinxError):
@@ -128,9 +130,45 @@ def render_dot(self, code, options, format, prefix='graphviz'):
     return relfn, outfn
 
 
-def render_dot_html(self, node, code, options, prefix='graphviz', imgcls=None):
+def get_svg_tag(svgref, svgfile, imgcls=None):
+    # Webkit can't figure out svg dimensions when using object tag
+    # so we need to get it from the svg file
+    fp = open(svgfile, 'r')
     try:
-        fname, outfn = render_dot(self, code, options, 'png', prefix)
+        for line in fp:
+            match = svg_dim_re.match(line)
+            if match:
+                dimensions = match.groups()
+                break
+        else:
+            dimensions = None
+    finally:
+        fp.close()
+
+    # We need this hack to make WebKit show our object tag properly
+    def pt2px(x):
+        return int(ceil((96.0/72.0) * float(x)))
+
+    if dimensions:
+        style = ' width="%s" height="%s"' % tuple(map(pt2px, dimensions))
+    else:
+        style = ''
+
+    # The object tag works fine on Firefox and WebKit
+    # Besides it's a hack, this strategy does not mess with templates.
+    imgcss = imgcls and ' class="%s"' % imgcls or ''
+    return '<object type="image/svg+xml" data="%s"%s%s/>\n' % \
+           (svgref, imgcss, style)
+
+
+def render_dot_html(self, node, code, options, prefix='graphviz',
+                    imgcls=None, alt=None):
+    format = self.builder.config.graphviz_output_format
+    try:
+        if format not in ('png', 'svg'):
+            raise GraphvizError("graphviz_output_format must be one of 'png', "
+                                "'svg', but is %r" % format)
+        fname, outfn = render_dot(self, code, options, format, prefix)
     except GraphvizError, exc:
         self.builder.warn('dot code %r: ' % code + str(exc))
         raise nodes.SkipNode
@@ -139,23 +177,29 @@ def render_dot_html(self, node, code, options, prefix='graphviz', imgcls=None):
     if fname is None:
         self.body.append(self.encode(code))
     else:
-        mapfile = open(outfn + '.map', 'rb')
-        try:
-            imgmap = mapfile.readlines()
-        finally:
-            mapfile.close()
-        imgcss = imgcls and 'class="%s"' % imgcls or ''
-        if len(imgmap) == 2:
-            # nothing in image map (the lines are <map> and </map>)
-            self.body.append('<img src="%s" alt="%s" %s/>\n' %
-                             (fname, self.encode(code).strip(), imgcss))
+        if alt is None:
+            alt = self.encode(code).strip()
+        if format == 'svg':
+            svgtag = get_svg_tag(fname, outfn, imgcls)
+            self.body.append(svgtag)
         else:
-            # has a map: get the name of the map and connect the parts
-            mapname = mapname_re.match(imgmap[0]).group(1)
-            self.body.append('<img src="%s" alt="%s" usemap="#%s" %s/>\n' %
-                             (fname, self.encode(code).strip(),
-                              mapname, imgcss))
-            self.body.extend(imgmap)
+            mapfile = open(outfn + '.map', 'rb')
+            try:
+                imgmap = mapfile.readlines()
+            finally:
+                mapfile.close()
+            imgcss = imgcls and 'class="%s"' % imgcls or ''
+            if len(imgmap) == 2:
+                # nothing in image map (the lines are <map> and </map>)
+                self.body.append('<img src="%s" alt="%s" %s/>\n' %
+                                 (fname, alt, imgcss))
+            else:
+                # has a map: get the name of the map and connect the parts
+                mapname = mapname_re.match(imgmap[0]).group(1)
+                self.body.append('<img src="%s" alt="%s" usemap="#%s" %s/>\n' %
+                                 (fname, alt, mapname, imgcss))
+                self.body.extend(imgmap)
+
     self.body.append('</p>\n')
     raise nodes.SkipNode
 
@@ -188,3 +232,4 @@ def setup(app):
     app.add_directive('digraph', GraphvizSimple)
     app.add_config_value('graphviz_dot', 'dot', 'html')
     app.add_config_value('graphviz_dot_args', [], 'html')
+    app.add_config_value('graphviz_output_format', 'png', 'html')
