@@ -9,6 +9,9 @@ Release 1.0 (in development)
 
 * Added Epub builder.
 
+* #309: The ``graphviz`` extension can now output SVG instead of PNG
+  images, controlled by the ``graphviz_output_format`` config value.
+
 * #284: All docinfo metadata is now put into the document metadata, not
   just the author.
 
@@ -59,6 +62,10 @@ Release 1.0 (in development)
 
 Release 0.6.4 (in development)
 ==============================
+
+* The ``alt`` text of inheritance diagrams is now much cleaner.
+
+* Ignore images in section titles when generating link captions.
 
 * #310: support exception messages in the ``testoutput`` blocks of
   the ``doctest`` extension.
